fix: increase z-index of top nav

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -242,7 +242,7 @@ h3 {
   z-index: 1;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 // Homepage
